[package]
name = "point_visualizer"
version = "1.0.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
exclude = ["dist", "build", "assets", "credits"]


[dependencies]
bevy = { version = "0.11.1", default-features=false, features = [
  "animation",
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gltf",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "dds",
  "filesystem_watcher",
  "jpeg",
  "ktx2",
  "zstd",
  "png",
]}
bevy_asset_loader = "0.17.0"
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_panorbit_camera = "0.8.0"
bevy_vector_shapes = "0.5.1"
serde = "1.0.183"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
